전체적으로 자세하게 주석 추가